packages/kit/test/build-errors/apps/syntax-error/svelte.config.js
/** @type {import('@tg-svelte/kit').Config} */
const config = {};

export default config;
